--- a/vars/all.yml
+++ b/vars/all.yml
@@ -1,8 +1,8 @@
 # ssh 登入的 user name
 agent_user: ubuntu
-bolt_main_ip: 192.168.2.15
-bolt_microservice_ip: 192.168.2.5
-howinvest_microservice_ip: 192.168.2.20
+bolt_main_ip: 192.168.2.20
+bolt_microservice_ip: 192.168.2.11
+howinvest_microservice_ip: 192.168.2.14
 
 authModulePassword: "P@ssw0rdHksNZX"
 opAccountPassword: "P@ssw0rdHksNZX"
@@ -13,3 +13,7 @@ HOWHOWSymbol: "HOWHOW"
 
 postgresUser: "howhow"
 postgresPassword: "DRFnNN67"
+
+ssh_known_hosts_file: /home/{{ agent_user }}/.ssh/known_hosts
+ssh_known_hosts_command: "ssh-keyscan -H -T 10"
+ssh_known_hosts: github.com
