--- a/vars/all.yml
+++ b/vars/all.yml
@@ -1,8 +1,9 @@
 # ssh 登入的 user name
-agent_user: ubuntu
-bolt_main_ip: 192.168.2.20
-bolt_microservice_ip: 192.168.2.11
-howinvest_microservice_ip: 192.168.2.14
+agent_user: tideops
+bolt_main_ip: 52.199.189.73
+bolt_microservice_ip: 13.113.193.7
+howinvest_microservice_ip: 3.112.250.9
+web3Url: "ws://3.82.172.25:8546"
 
 authModulePassword: "P@ssw0rdHksNZX"
 opAccountPassword: "P@ssw0rdHksNZX"
