fix some deploy bug

--- a/multi-playbook-step2.yml
+++ b/multi-playbook-step2.yml
@@ -1,152 +1,6 @@
----
-- hosts: multi
-  sudo: yes
-  vars_files: vars/all.yml
-  roles:
-    - { role: init-env, user: "{{ agent_user }}" }
-    - { role: geerlingguy.nodejs, nodejs_install_npm_user: "{{ agent_user }}" }
-  tasks:
-    - name: Check if node already installed
-      command: node --version
-      ignore_errors: true
-      changed_when: false
-      register: node_is_installed
-    - name: install nvm
-      shell: >
-        curl https://raw.githubusercontent.com/creationix/nvm/v0.7.0/install.sh | sh
-        creates=.nvm/nvm.sh
-      when: node_is_installed.rc != 0
-    - name: install node and set version
-      shell: >
-        /bin/bash -c "source ~/.nvm/nvm.sh && nvm install v8.9.4 && nvm alias default v8.9.4"
-        creates=.nvm/alias
-      when: node_is_installed.rc != 0
-
-- hosts: bolt_main
-  name: clone project
-  tasks:
-    - name: pull repo
-      ignore_errors: true
-      git:
-        repo: "{{ item.repo }}"
-        dest: "{{ item.name }}"
-        accept_hostkey: yes
-        version: develop
-      with_items:
-        - { repo: git@github.com:BOLT-Protocol/Howinvest-APIGateway.git, name: Howinvest-APIGateway }
-        - { repo: git@github.com:BOLT-Protocol/BOLT-AUTOMATION.git, name: BOLT-AUTOMATION }
-
-- hosts: bolt_microservice
-  name: clone project
-  tasks:
-    # - name: pull repo
-    #   ignore_errors: true
-    #   git:
-    #     repo: "{{ item.repo }}"
-    #     dest: "{{ item.name }}"
-    #     accept_hostkey: yes
-    #     version: develop
-    #   with_items:
-    #     - { repo: git@github.com:VagrantPi/privateChain.git, name: privateChain }
-    #     - { repo: git@github.com:BOLT-Protocol/gringotts.git, name: gringotts }
-    #     - { repo: git@github.com:BOLT-Protocol/contracts.git, name: contracts }
-    - name: pull repo
-      ignore_errors: true
-      git:
-        repo: "{{ item.repo }}"
-        dest: "{{ item.name }}"
-        accept_hostkey: yes
-        version: develop
-      with_items:
-        - { repo: git@github.com:BOLT-Protocol/BOLT-KEYSTONE.git, name: BOLT-KEYSTONE }
-        - { repo: git@github.com:BOLT-Protocol/BOLT-KEYCHAIN.git, name: BOLT-KEYCHAIN }
-        - { repo: git@github.com:BOLT-Protocol/BOLT-TRUST.git, name: BOLT-TRUST }
-        - { repo: git@github.com:BOLT-Protocol/BOLT-CURRENCY.git, name: BOLT-CURRENCY }
-
-- hosts: howinvest_microservice
-  name: clone project
-  tasks:
-    - name: pull repo
-      ignore_errors: true
-      git:
-        repo: "{{ item.repo }}"
-        dest: "{{ item.name }}"
-        accept_hostkey: yes
-        version: develop
-      with_items:
-        - { repo: git@github.com:BOLT-Protocol/HowInvest-AuthModule.git, name: HowInvest-AuthModule }
-        - { repo: git@github.com:BOLT-Protocol/HowInvest-TradeModule.git, name: HowInvest-TradeModule }
-        - { repo: git@github.com:BOLT-Protocol/HowInvest-Blacklist.git, name: HowInvest-Blacklist }
-
-# - hosts: bolt_microservice
-#   name: set chain
-#   sudo: yes
-#   tasks:
-#     - name: add ethereum repo
-#       apt_repository:
-#         repo: ppa:ethereum/ethereum
-#     - name: install ethereum
-#       apt:
-#         name: "{{ packages }}"
-#   vars:
-#     - packages:
-#       - software-properties-common
-#       - ethereum
-
-# - hosts: bolt_microservice
-#   name: start chain
-#   vars_files: vars/all.yml
-#   tasks:
-#     - name: reset config
-#       shell:
-#         sed -i "s#/home/vagrant#{{ home_path }}#g" privateChain/reset.sh;
-#         sed -i "s#/home/vagrant#{{ home_path }}#g" privateChain/start.sh;
-#       ignore_errors: true
-#     - name: reset privateChain
-#       command: sh reset.sh
-#       args:
-#         chdir: privateChain/
-#     - name: start privateChain
-#       shell: "(cd privateChain/; nohup sh start.sh >/dev/null 2>&1 &)"
-#   vars:
-#     - home_path: "/home/{{ agent_user }}"
-
-- hosts: bolt_microservice
-  name: init DB
-  vars_files: vars/all.yml
-  sudo: True
-  tasks:
-    - name: Install PostgreSQL
-      apt: 
-        name: ['aptitude', 'postgresql', 'python-psycopg2', 'postgresql-contrib', 'libpq-dev', 'python-pkg-resources', 'python-pip', 'python3-pip']
-        update_cache: yes
-        state: present
-    - name: pip install psycopg2
-      ignore_errors: true
-      pip:
-        name: ['psycopg2']
-    - name: Create database
-      become_user: postgres
-      postgresql_db:
-        name: "{{ item }}"
-      with_items:
-        - bolt
-        - trust
-    - name: Create database user
-      become: yes
-      become_user: postgres
-      vars:
-        ansible_ssh_pipelining: true
-      postgresql_user:
-        db: "{{ item }}"
-        name: "{{ postgresUser }}"
-        password: "{{ postgresPassword }}"
-      with_items:
-        - bolt
-        - trust
-
 - hosts: bolt_microservice
   name: start all bolt_microservice
+  vars_files: vars/all.yml
   tasks:
     - name: Install packages based on package.json.
       npm:
@@ -365,5 +219,5 @@
     - name: Change ~/.ssh, group and permissions
       file:
         path: "/home/{{ agent_user }}/.ssh"
-        owner: ubuntu
-        group: ubuntu
+        owner: "{{ agent_user }}"
+        group: "{{ agent_user }}"
